[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/pausescreen/Pausemenu.gd" type="Script" id=1]
[ext_resource path="res://ui_elements/font/Title_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui_elements/MenuBG.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui_elements/font/Menu_Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui_elements/Button_Style.tres" type="StyleBox" id=5]

[sub_resource type="Theme" id=1]

[node name="MarginContainer" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 480
custom_constants/margin_top = 220
custom_constants/margin_left = 480
custom_constants/margin_bottom = 220
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBG" parent="." instance=ExtResource( 3 )]
margin_left = 480.0
margin_top = 220.0
margin_right = 1440.0
margin_bottom = 860.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBG"]
margin_right = 960.0
margin_bottom = 640.0

[node name="Label" type="Label" parent="MenuBG/VBoxContainer"]
margin_right = 960.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSE"

[node name="MarginContainer" type="MarginContainer" parent="MenuBG/VBoxContainer"]
margin_top = 114.0
margin_right = 960.0
margin_bottom = 640.0
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBG/VBoxContainer/MarginContainer"]
margin_left = 15.0
margin_top = 5.0
margin_right = 945.0
margin_bottom = 511.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="continue" type="Button" parent="MenuBG/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 930.0
margin_bottom = 119.0
size_flags_vertical = 3
theme = SubResource( 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Fortsetzen"

[node name="restart" type="Button" parent="MenuBG/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 930.0
margin_bottom = 248.0
size_flags_vertical = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Neustarten"

[node name="titlescreen" type="Button" parent="MenuBG/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 930.0
margin_bottom = 377.0
size_flags_vertical = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Zur√ºck zu Startbildschirm"

[node name="close" type="Button" parent="MenuBG/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 387.0
margin_right = 930.0
margin_bottom = 506.0
size_flags_vertical = 3
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Spiel Beenden"
[connection signal="pressed" from="MenuBG/VBoxContainer/MarginContainer/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MenuBG/VBoxContainer/MarginContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MenuBG/VBoxContainer/MarginContainer/VBoxContainer/titlescreen" to="." method="_on_titlescreen_pressed"]
[connection signal="pressed" from="MenuBG/VBoxContainer/MarginContainer/VBoxContainer/close" to="." method="_on_close_pressed"]
